Fixed li element overflow

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 
 
 li {
-	margin: 20px;
+	margin: 20px 0px 20px 0px;
 }
 
 hr { 
